fix: overflow auto

--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,7 @@ body {
 
 .container {
   height: 653px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .head-tab {
